--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,9 @@ taxonomies = [
   { name = "tags", feed = true },
 ]
 
+generate_feeds = true
+feed_filenames = ["atom.xml", "rss.xml"]
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
@@ -28,14 +31,14 @@ navbar_items = [
     { url = "$BASE_URL/events", name = "Events" },
     { url = "$BASE_URL/organization", name = "Organization" },
     { url = "$BASE_URL/volunteers", name = "Volunteers" },
-    { url = "$BASE_URL/categories", name = "Categories" },
-    { url = "$BASE_URL/tags", name = "Tags" },
+    # { url = "$BASE_URL/categories", name = "Categories" },
+    # { url = "$BASE_URL/tags", name = "Tags" },
   ] },
 ]
 
 [extra.author]
 name = "Erik Rose"
-avatar = ""
+# avatar = ""
 
 [extra.social]
 email = "erose@grantspassoregon.gov"
